After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 579625 - Cancel button on Gtk.Assistant should have Esc as accelerator
Cancel button on Gtk.Assistant should have Esc as accelerator
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
2.10.x
Other All
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2009-04-20 16:30 UTC by Vlad
Modified: 2014-09-08 04:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Vlad 2009-04-20 16:30:49 UTC
Please describe the problem:
Cancel button event should be triggered by the Esc key accelerator on a GtkAssistant. 

Steps to reproduce:
1. Create a GtkAssistant.
2. Add a page.
3. Hit Esc.


Actual results:
Assistant is not closing.

Expected results:
Assistant should close

Does this happen every time?
Yes

Other information:
This is a little related to bug 555729.